working towards implementing categories, lots of css, add guidelines to welcome page

--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -3,7 +3,7 @@
   position: absolute;
   justify-content: center;
   overflow: hidden;
-  font-family:"Helvetica Neue", Helvetica, Sans-serif;
+  /* font-family:"Helvetica Neue", Helvetica, Sans-serif; */
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
 }
@@ -64,25 +64,12 @@
   overflow: hidden;
   max-height: 0;
 }
-
 .fade-enter-active, .fade-leave-active {
   transition: opacity 0.3s;
 }
 .fade-enter, .fade-leave-to {
   opacity: 0;
 }
-
-
-
-@keyframes lds-dual-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 .custom-button {
   display: flex;
   justify-content: center;
@@ -94,7 +81,7 @@
   color:rgb(105, 185, 98);
   cursor:pointer;
   font-size: 24px;
-  border: 2px solid rgb(105, 185, 98);
+  border: 1px solid rgb(105, 185, 98);
   border-radius: 2px;
   box-shadow: 0 0 5px rgb(105, 185, 98);
 }
@@ -105,12 +92,66 @@
   font-size: 28px;
 }
 
-@media screen and (max-width: 1000px){
+.text-field {
+  margin: 4px;
+  padding: 4px 16px;
+  padding-top: 6px;
+  font-size: 20px;
+  width: 30vw;
+  height: 26px;
+  border-radius:50px;
+  resize: none;
+  border: 1px solid rgb(184, 184, 184);
+  box-shadow: 0 0 5px rgb(184, 184, 184);
+  color: gray;
+  /* font-family:"Helvetica Neue", Helvetica, Sans-serif; */
+}
+.text-field:focus {
+    outline: none !important;
+    border: 1px solid  rgb(213, 82, 68);
+    box-shadow: 0 0 5px rgb(213, 82, 68);
+    color: rgb(71, 7, 0);
+}
+
+select::-ms-expand {
+  display: none;
+}
+.select {
+  cursor:pointer;
+  outline:0;
+  border:0!important;
+  position: relative;
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  line-height: 3;
+  background: rgb(213, 82, 68);
+  overflow: hidden;
+  border-radius: 5px;
+  color: white;
+  font-size: 20px;
+}
+
+
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+#separator-line {
+  border-bottom: 1px solid rgba(209, 80, 80, 0.418);
+  margin: 6px 6px;
+}
+
+@media screen and (max-width: 600px){
 .container {
   width: 100vw;
   overflow: hidden;
 }
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 600px){
 .mobile-hide {
   display: none;
 }
