--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -3,7 +3,6 @@
   position: absolute;
   justify-content: center;
   overflow: hidden;
-  /* font-family:"Helvetica Neue", Helvetica, Sans-serif; */
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
 }
@@ -76,13 +75,13 @@
   align-items: center;
   margin: 5px;
   padding: 5px;
-  height: 24px;
-  width: 24px;
+  height: 32px;
+  width: 32px;
   color:rgb(105, 185, 98);
   cursor:pointer;
   font-size: 24px;
   border: 1px solid rgb(105, 185, 98);
-  border-radius: 2px;
+  border-radius: 30px;
   box-shadow: 0 0 5px rgb(105, 185, 98);
 }
 .custom-button:active {
@@ -94,23 +93,28 @@
 
 .text-field {
   margin: 4px;
-  padding: 4px 16px;
-  padding-top: 6px;
-  font-size: 20px;
+  padding: 3px 16px;
+  padding-top: 5px;
+  font-size: 24px;
   width: 30vw;
-  height: 26px;
+  height: 32px;
   border-radius:50px;
   resize: none;
   border: 1px solid rgb(184, 184, 184);
   box-shadow: 0 0 5px rgb(184, 184, 184);
   color: gray;
-  /* font-family:"Helvetica Neue", Helvetica, Sans-serif; */
+  font-family: "Montserrat";
+  overflow-y: hidden;
 }
 .text-field:focus {
     outline: none !important;
     border: 1px solid  rgb(213, 82, 68);
     box-shadow: 0 0 5px rgb(213, 82, 68);
     color: rgb(71, 7, 0);
+}
+
+.material-icons {
+  cursor: pointer;
 }
 
 select::-ms-expand {
@@ -131,7 +135,6 @@ select::-ms-expand {
   color: white;
   font-size: 20px;
 }
-
 
 @keyframes lds-dual-ring {
   0% {
