* Use generic error popup for auth errors * Add spin and transform for plus button * Automatically create new list if 0 lists * Complete category selection menu design

--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -35,6 +35,15 @@
   border-color: white transparent white transparent;
 }
 
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+
 .slide-enter-active {
   -moz-transition-duration: 0.8s;
   -webkit-transition-duration: 0.8s;
@@ -88,6 +97,9 @@
   box-shadow: none;
 }
 .material-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 28px;
 }
 
