--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -35,6 +35,23 @@
   border-color: white transparent white transparent;
 }
 
+.plus-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 7px;
+  color: white;
+  font-size: 46px;
+  transition: 250ms ease-in-out, transform 150ms ease;
+  transform: scale(1);
+  transform: scale(var(--plusSize));
+  cursor:pointer;
+  animation-name: var(--plusSpin);
+  animation-duration: 600ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
 @keyframes spin {
   from {
       transform:rotate(0deg);
@@ -45,24 +62,16 @@
 }
 
 .slide-enter-active {
-  -moz-transition-duration: 0.8s;
-  -webkit-transition-duration: 0.8s;
-  -o-transition-duration: 0.8s;
-  transition-duration: 0.8s;
-  -moz-transition-timing-function: ease-in;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
+  -webkit-transition-duration: 2s;
+  transition-duration: 2s;
+  -webkit-transition-timing-function: linear;
+  transition-timing-function: linear;
 }
 .slide-leave-active {
-  -moz-transition-duration: 0.6s;
-  -webkit-transition-duration: 0.6s;
-  -o-transition-duration: 0.6s;
-  transition-duration: 0.6s;
-  -moz-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-  -webkit-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-  -o-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  -webkit-transition-duration: 2s;
+  transition-duration: 2s;
+  -webkit-transition-timing-function: linear;
+  transition-timing-function: linear;
 }
 .slide-enter-to, .slide-leave {
   overflow: hidden;
@@ -89,9 +98,7 @@
   color:rgb(105, 185, 98);
   cursor:pointer;
   font-size: 24px;
-  border: 1px solid rgb(105, 185, 98);
   border-radius: 30px;
-  box-shadow: 0 0 5px rgb(105, 185, 98);
 }
 .custom-button:active {
   box-shadow: none;
