--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -2,6 +2,7 @@
   display: flex;
   position: absolute;
   justify-content: center;
+  width: 100vw;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
