Lots of css changes and refactoring Remove traces of list menu Remove descriptive text from app body Make buttons more buttony for accessibility reasons (still some left to do) Revamp category menu to item menu (added edit and delete functionality) Try to create some logic to avoid fetching items for lists that are known to be empty, also if items are already loaded

--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -40,30 +40,32 @@
   border-color: white transparent white transparent;
 }
 
-.plus-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 7px;
-  color: white;
-  font-size: 46px;
+button {
+  border: none;
   transition: 250ms ease-in-out, transform 150ms ease;
-  transform: scale(1);
-  transform: scale(var(--plusSize));
-  cursor:pointer;
-  animation-name: var(--plusSpin);
-  animation-duration: 600ms;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background: transparent;
+  border-radius: 30px;
+  font-size: 52px;
+  border-radius: 50px;
+  cursor: pointer;
 }
 
-@keyframes spin {
-  from {
-      transform:rotate(0deg);
-  }
-  to {
-      transform:rotate(360deg);
-  }
+button:hover {
+}
+button:focus {
+  outline: none !important;
+}
+
+button:active {
+  transform: scale(0.95);
+  outline: none !important;
+  box-shadow: none;
 }
 
 .slide-enter-active {
@@ -170,6 +172,11 @@ select::-ms-expand {
   font-size: 20px;
 }
 
+#delete-icon {
+  margin-left: 6px;
+  color: rgb(187, 57, 42)
+}
+
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
@@ -179,9 +186,9 @@ select::-ms-expand {
   }
 }
 
-#separator-line {
+.separator-line {
   border-bottom: 1px solid rgba(209, 80, 80, 0.418);
-  margin: 6px 6px;
+  margin: 8px 6px;
 }
 
 @media screen and (max-width: 600px){
