Keep loaded lists content in state Move lists fetch in component tree Work on About and Help pages

--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -177,6 +177,32 @@ select::-ms-expand {
   font-size: 20px;
 }
 
+.router-sub-page {
+  display:flex; 
+  flex-direction: column;
+  height: var(--vh, 1vh);
+  font-size: 20px;
+  max-width: 1000px;
+}
+
+.page-body {
+  padding: 0px 20px;
+  color: rgb(80, 80, 80);
+  overflow: auto;
+  height: 86%;
+}
+
+.sub-heading {
+  margin: 20px 0px 10px 0px;
+  font-weight: bold;
+}
+
+.sub-text {
+  margin: 0px 0px 20px 10px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
 #delete-icon {
   margin-left: 6px;
   color: rgb(187, 57, 42)
