--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -4,10 +4,11 @@
   position: absolute;
   justify-content: center;
   width: 100vw;
+  height: 100vh;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
-  background-color: rgb(255, 250, 245);
+  background-color: rgb(255, 245, 245);
 }
 
 .lds-dual-ring {
@@ -76,6 +77,24 @@ button:active {
 
 .fade-enter, .fade-leave-to {
   opacity: 0;
+}
+
+.bounce-enter-active {
+  animation: bounce-in .2s;
+}
+.bounce-leave-active {
+  animation: bounce-in .2s reverse;
+}
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .custom-button {
