--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -8,7 +8,7 @@
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
-  background-color: rgb(250, 250, 245);
+  background-color: rgb(225, 220, 220);
 }
 
 .lds-dual-ring {
@@ -31,7 +31,7 @@
   margin: 0px;
   border-radius: 50%;
   border: 3px solid white;
-  border-color: white transparent white transparent;
+  border-color: rgb(255, 253, 252) transparent white transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 
@@ -40,7 +40,7 @@
   width: 20px;
   height: 20px;
   border: 4px solid white;
-  border-color: white transparent white transparent;
+  border-color: rgb(255, 253, 252) transparent white transparent;
 }
 
 button {
@@ -52,7 +52,7 @@ button {
   display: -webkit-flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgb(255, 253, 252);
   background: transparent;
   cursor: pointer;
 }
@@ -117,7 +117,7 @@ button:active {
 }
 
 .text-field {
-  margin: 4px;
+  margin: 3px;
   padding: 3px 16px;
   padding-top: 5px;
   font-size: 24px;
@@ -130,12 +130,14 @@ button:active {
   color: gray;
   font-family: "Montserrat";
   overflow-y: hidden;
+  background-color: rgb(255, 253, 252);
 }
 
 .text-field:focus {
   outline: none !important;
-  border: 1px solid rgba(223, 73, 98, 0.5);
-  box-shadow: 0 0 4px  rgba(223, 73, 98, 0.6);
+  background-color: white;
+  border: 1px solid rgb(226, 193, 174);
+  box-shadow: 0 0 4px 1px rgb(226, 193, 174);
   color: rgb(71, 7, 0);
 }
 
@@ -160,7 +162,7 @@ select::-ms-expand {
   background: rgb(213, 82, 68);
   overflow: hidden;
   border-radius: 5px;
-  color: white;
+  color: rgb(255, 253, 252);
   font-size: 20px;
 }
 
@@ -171,7 +173,7 @@ select::-ms-expand {
   height: var(--vh, 1vh);
   font-size: 20px;
   max-width: 988px;
-  background: white;
+  background: rgb(255, 253, 252);
   box-shadow: 0px 0px 4px rgb(171, 171, 171);
 
 }
@@ -213,20 +215,20 @@ select::-ms-expand {
   margin: 8px 6px;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 800px){
 .container {
   width: 100vw;
   overflow: hidden;
 }
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 800px){
 .mobile-hide {
   display: none;
 }
 }
 
-@media screen and (min-width: 600px){
+@media screen and (min-width: 800px){
 .desktop-hide {
   display: none;
 }
