--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -99,6 +99,8 @@ button:active {
   font-family: "Montserrat";
   overflow-y: hidden;
   background-color: rgb(255, 253, 252);
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .text-field:focus {
