--- a/client/src/globalCss.css
+++ b/client/src/globalCss.css
@@ -156,12 +156,12 @@ select::-ms-expand {
 }
 
 .sub-heading {
-  margin: 20px 0px 10px 0px;
+  margin: 20px 0px 16px 0px;
   font-weight: bold;
 }
 
 .sub-text {
-  margin: 0px 0px 20px 10px;
+  margin: 0px 0px 20px 18px;
   font-size: 18px;
   font-weight: normal;
 }
@@ -169,15 +169,6 @@ select::-ms-expand {
 #delete-icon {
   margin-left: 6px;
   color: rgb(187, 57, 42)
-}
-
-@keyframes lds-dual-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 .separator-line {
@@ -190,9 +181,13 @@ select::-ms-expand {
   width: 100vw;
   overflow: hidden;
 }
+
+.sub-text {
+  margin: 0px 0px 16px 8px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
-@media screen and (max-width: 800px){
 .mobile-hide {
   display: none;
 }
